- Fixes coverage gap in GOP Reinstallation from Random Access Memory
  * GOP was previously only reinstalled when at least one driver was loaded
- Adds 'EnableAPFS' feature
  * This eliminates the need for APFS drivers when APFS is not supported
- Adds 'SuppressVerboseAPFS' feature
  * This removes the scrolling loading text that appears when using apfs drivers
  * Provided as a separate item as its action may impact other text output 


0.12.0.AN (04 Jan 2021):
-----------------------
- Adds 'EXT4_FEATURE_INCOMPAT_ENCRYPT' Support to Ext4 Driver
- Maps deprecated 'HandleProtocol' calls to 'OpenProtocol'
- Drops ineffective attempt to detect timezones
- Fixes issue with disappearing Mouse on x64 Arch
- Fixes Bogus Bootable Windows BIOS Instances
- Changes default config filename to config.conf
  * Retains support for refind.conf
- Loads 'MemoryFix' driver on OpenCore Boots if required and available
  * Enables the Stage 1 Loading Screen on some Classic Macs
- Fixes ESP detection for saving screenshots
  * ESP detection may have sometimes returned 'true' on other locations
- Implements "force_trim" config option
  * Enables 'TRIM' on non-Apple SSDs when booting into Mac OS
- Implements "disable_mac_compat_check" config option
  * Disables Mac OS compatibility checks to allow booting new Mac OS Versions on unsupported Macs
- Implements "disable_amfi" config option
  * Disables the Apple Mobile File Integrity (AMFI) checks in Mac OS
  * Disabling AMFI may further facilitate booting new Mac OS Versions on unsupported Macs
- Implements "protect_mac_nvram" config option
  * Prevents UEFI Windows from saving certificates to the NVRAM on Macs
  * These certificates damage Apple NVRAM and result in an inability to start Macs up
- Implements "set_mac_boot_args" config option
  * Allows setting arbitrary boot arguments on Mac OS


0.12.0.AM (07 Dec 2020):
-----------------------
- Optimises search for graphics capabilities and overall boot speed