@@ -1052,6 +1052,9 @@ ReadConfig (
         else if (MyStriCmp (TokenList[0], L"protect_mac_nvram")) {
           GlobalConfig.ProtectMacNVRAM = HandleBoolean (TokenList, TokenCount);
         }
+        else if (MyStriCmp (TokenList[0], L"allow_duplicates")) {
+          GlobalConfig.AllowDuplicates = HandleBoolean (TokenList, TokenCount);
+        }
         else if (MyStriCmp (TokenList[0], L"scale_ui")) {
            HandleInt (TokenList, TokenCount, &(GlobalConfig.ScaleUI));
         }
